deploy: 0023e2d4db7b3d32fdc81d126217182f643b6486

--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     </thead>
     <tbody class="list">
         <tr>
-          <td class="total">12</td>
+          <td class="total">0</td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/583">Making the &#x60;display&#x60; and &#x60;content-visibility&#x60; CSS properties animatable</a></td>
+        </tr>
+        <tr>
+          <td class="total">0</td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/582">The &#x60;@starting-style&#x60; CSS rule</a></td>
+        </tr>
+        <tr>
+          <td class="total">0</td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/581">The &#x60;overlay&#x60; CSS property</a></td>
+        </tr>
+        <tr>
+          <td class="total">0</td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/580">The &#x60;transition-behavior&#x60; CSS property</a></td>
+        </tr>
+        <tr>
+          <td class="total">13</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/573">Allowing &#x60;&lt;hr&gt;&#x60; inside of &#x60;&lt;select&gt;&#x60;</a></td>
         </tr>
         <tr>
@@ -30,7 +46,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/572">&lt;search&gt;</a></td>
         </tr>
         <tr>
-          <td class="total">7</td>
+          <td class="total">8</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/571">scrollbar-width CSS property</a></td>
         </tr>
         <tr>
@@ -42,7 +58,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/569">Emoji text rendering using non-system emoji fonts</a></td>
         </tr>
         <tr>
-          <td class="total">9</td>
+          <td class="total">12</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/568">&#x60;display: contents&#x60;</a></td>
         </tr>
         <tr>
@@ -62,7 +78,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/562">text-wrap: pretty</a></td>
         </tr>
         <tr>
-          <td class="total">14</td>
+          <td class="total">15</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/561">text-wrap: balance</a></td>
         </tr>
         <tr>
@@ -82,7 +98,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/557">Storage Access API</a></td>
         </tr>
         <tr>
-          <td class="total">58</td>
+          <td class="total">59</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/556">CSS box sizing properties with MathML Core</a></td>
         </tr>
         <tr>
@@ -94,7 +110,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/554">Standardize SVG properties in CSS to support unitless geometry</a></td>
         </tr>
         <tr>
-          <td class="total">21</td>
+          <td class="total">22</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/553">&lt;details&gt; and &lt;summary&gt; elements</a></td>
         </tr>
         <tr>
@@ -102,7 +118,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/549">WebTransport API</a></td>
         </tr>
         <tr>
-          <td class="total">3</td>
+          <td class="total">4</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/548">WasmGC </a></td>
         </tr>
         <tr>
@@ -122,11 +138,11 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/544">Web Audio API</a></td>
         </tr>
         <tr>
-          <td class="total">1</td>
+          <td class="total">2</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/542">size-adjust</a></td>
         </tr>
         <tr>
-          <td class="total">2</td>
+          <td class="total">3</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/541">font-size-adjust</a></td>
         </tr>
         <tr>
@@ -142,7 +158,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/538">CSS text-indent</a></td>
         </tr>
         <tr>
-          <td class="total">6</td>
+          <td class="total">7</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/537">HTML &#x60;focusgroup&#x60; attribute</a></td>
         </tr>
         <tr>
@@ -202,11 +218,11 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/522">WebXR</a></td>
         </tr>
         <tr>
-          <td class="total">67</td>
+          <td class="total">70</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/521">&#x60;attr()&#x60; support extended capabilities</a></td>
         </tr>
         <tr>
-          <td class="total">7</td>
+          <td class="total">8</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/520">CSS Multi-Column Layout block element breaking</a></td>
         </tr>
         <tr>
@@ -230,7 +246,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/513">Unit division and multiplication for mixed units of the same type within calc()</a></td>
         </tr>
         <tr>
-          <td class="total">10</td>
+          <td class="total">11</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/512">Accessibility issues with display properties (not including &#x60;display: contents&#x60;)</a></td>
         </tr>
         <tr>
@@ -238,7 +254,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/511">Ready-made counter styles</a></td>
         </tr>
         <tr>
-          <td class="total">8</td>
+          <td class="total">10</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/510">Media pseudo classes: &#x60;:paused&#x60;/&#x60;:playing&#x60;/&#x60;:seeking&#x60;/&#x60;:buffering&#x60;/&#x60;:stalled&#x60;/&#x60;:muted&#x60;/&#x60;:volume-locked&#x60;</a></td>
         </tr>
         <tr>
@@ -258,7 +274,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/503">CSS &#x60;object-view-box&#x60;</a></td>
         </tr>
         <tr>
-          <td class="total">22</td>
+          <td class="total">23</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/501">Declarative Shadow DOM</a></td>
         </tr>
         <tr>
@@ -278,20 +294,12 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/496">CSS Painting API Level 1 (houdini)</a></td>
         </tr>
         <tr>
-          <td class="total">26</td>
-          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/495">Top Layer Animations</a></td>
-        </tr>
-        <tr>
           <td class="total">3</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/494">HTMLVideoElement.requestVideoFrameCallback()</a></td>
         </tr>
         <tr>
           <td class="total">5</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/493">Canvas2D filter and reset</a></td>
-        </tr>
-        <tr>
-          <td class="total">12</td>
-          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/492">CSS Scroll Snap</a></td>
         </tr>
         <tr>
           <td class="total">4</td>
@@ -322,7 +330,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/484">WebM Opus audio codec</a></td>
         </tr>
         <tr>
-          <td class="total">8</td>
+          <td class="total">9</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/465">CSS image() function</a></td>
         </tr>
         <tr>
@@ -330,7 +338,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/464">Web Share API</a></td>
         </tr>
         <tr>
-          <td class="total">32</td>
+          <td class="total">34</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/455">CSS anchor positioning</a></td>
         </tr>
         <tr>
@@ -358,11 +366,11 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/440">css fill/stroke</a></td>
         </tr>
         <tr>
-          <td class="total">71</td>
+          <td class="total">73</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/439">Scroll-driven Animations</a></td>
         </tr>
         <tr>
-          <td class="total">105</td>
+          <td class="total">110</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/437">View Transitions Level 1</a></td>
         </tr>
         <tr>
@@ -370,7 +378,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/436">import attributes / JSON modules / CSS modules</a></td>
         </tr>
         <tr>
-          <td class="total">46</td>
+          <td class="total">47</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/435">Navigation API</a></td>
         </tr>
         <tr>
@@ -378,7 +386,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/434">CSS Logical Properties and Values</a></td>
         </tr>
         <tr>
-          <td class="total">29</td>
+          <td class="total">30</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/433">CSS style container queries (custom properties)</a></td>
         </tr>
         <tr>
@@ -386,11 +394,11 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/431">CSS &#x60;caret&#x60;, &#x60;caret-color&#x60; and &#x60;caret-shape&#x60; properties</a></td>
         </tr>
         <tr>
-          <td class="total">137</td>
+          <td class="total">139</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/430">JPEG XL image format</a></td>
         </tr>
         <tr>
-          <td class="total">23</td>
+          <td class="total">25</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/429">margin-trim</a></td>
         </tr>
         <tr>
@@ -402,23 +410,23 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/427">Canvas text rendering and metrics (2024 edition)</a></td>
         </tr>
         <tr>
-          <td class="total">39</td>
+          <td class="total">40</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/426">Relative Color Syntax</a></td>
         </tr>
         <tr>
-          <td class="total">65</td>
+          <td class="total">66</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/423">Popover</a></td>
         </tr>
         <tr>
-          <td class="total">28</td>
+          <td class="total">30</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/422">text-box-trim</a></td>
         </tr>
         <tr>
-          <td class="total">22</td>
+          <td class="total">23</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/421">Custom Media Queries</a></td>
         </tr>
         <tr>
-          <td class="total">34</td>
+          <td class="total">36</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/420">CSS Nesting</a></td>
         </tr>
         <tr>
@@ -434,5 +442,5 @@
 </div>
 </main>
 <footer>
-Last updated 2023-10-12
+Last updated 2023-10-13
 </footer>
