--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/557">Storage Access API</a></td>
         </tr>
         <tr>
-          <td class="total">63</td>
+          <td class="total">64</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/556">CSS box sizing properties with MathML Core</a></td>
         </tr>
         <tr>
@@ -162,7 +162,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/536">Fetch Web API </a></td>
         </tr>
         <tr>
-          <td class="total">0</td>
+          <td class="total">1</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/535">CSS :dir() selectors and dir&#x3D;auto interoperability</a></td>
         </tr>
         <tr>
@@ -215,7 +215,7 @@
         </tr>
         <tr>
           <td class="total">71</td>
-          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/521">&#x60;attr()&#x60; support extended capabilities</a></td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/521">[css-values-5] &#x60;attr()&#x60; support extended capabilities</a></td>
         </tr>
         <tr>
           <td class="total">14</td>
@@ -366,15 +366,15 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/439">Scroll-driven Animations</a></td>
         </tr>
         <tr>
-          <td class="total">120</td>
+          <td class="total">121</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/437">View Transitions Level 1</a></td>
         </tr>
         <tr>
-          <td class="total">10</td>
+          <td class="total">11</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/436">import attributes / JSON modules / CSS modules</a></td>
         </tr>
         <tr>
-          <td class="total">47</td>
+          <td class="total">48</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/435">Navigation API</a></td>
         </tr>
         <tr>
@@ -390,7 +390,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/431">CSS &#x60;caret&#x60;, &#x60;caret-color&#x60; and &#x60;caret-shape&#x60; properties</a></td>
         </tr>
         <tr>
-          <td class="total">161</td>
+          <td class="total">164</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/430">JPEG XL image format</a></td>
         </tr>
         <tr>
@@ -438,5 +438,5 @@
 </div>
 </main>
 <footer>
-Last updated 2023-10-25
+Last updated 2023-10-26
 </footer>
