--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     </thead>
     <tbody class="list">
         <tr>
+          <td class="total">1</td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/597">CSS Module Scripts</a></td>
+        </tr>
+        <tr>
+          <td class="total">1</td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/596">JSON Module Scripts</a></td>
+        </tr>
+        <tr>
           <td class="total">3</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/583">Making the &#x60;display&#x60; and &#x60;content-visibility&#x60; CSS properties animatable</a></td>
         </tr>
@@ -38,7 +46,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/580">The &#x60;transition-behavior&#x60; CSS property</a></td>
         </tr>
         <tr>
-          <td class="total">15</td>
+          <td class="total">16</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/573">Allowing &#x60;&lt;hr&gt;&#x60; inside of &#x60;&lt;select&gt;&#x60;</a></td>
         </tr>
         <tr>
@@ -334,7 +342,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/464">Web Share API</a></td>
         </tr>
         <tr>
-          <td class="total">36</td>
+          <td class="total">37</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/455">CSS anchor positioning</a></td>
         </tr>
         <tr>
@@ -370,15 +378,11 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/437">View Transitions Level 1</a></td>
         </tr>
         <tr>
-          <td class="total">11</td>
-          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/436">import attributes / JSON modules / CSS modules</a></td>
-        </tr>
-        <tr>
-          <td class="total">48</td>
+          <td class="total">49</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/435">Navigation API</a></td>
         </tr>
         <tr>
-          <td class="total">9</td>
+          <td class="total">10</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/434">CSS Logical Properties and Values</a></td>
         </tr>
         <tr>
@@ -390,7 +394,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/431">CSS &#x60;caret&#x60;, &#x60;caret-color&#x60; and &#x60;caret-shape&#x60; properties</a></td>
         </tr>
         <tr>
-          <td class="total">164</td>
+          <td class="total">165</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/430">JPEG XL image format</a></td>
         </tr>
         <tr>
@@ -414,7 +418,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/423">Popover</a></td>
         </tr>
         <tr>
-          <td class="total">30</td>
+          <td class="total">31</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/422">text-box-trim</a></td>
         </tr>
         <tr>
@@ -438,5 +442,5 @@
 </div>
 </main>
 <footer>
-Last updated 2023-10-26
+Last updated 2023-10-27
 </footer>
