--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </tr>
         <tr>
           <td class="total">12</td>
-          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/568">&#x60;display: contents&#x60;</a></td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/568">&#x60;display: contents&#x60; accessibility</a></td>
         </tr>
         <tr>
           <td class="total">3</td>
@@ -82,7 +82,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/563">requestIdleCallback</a></td>
         </tr>
         <tr>
-          <td class="total">13</td>
+          <td class="total">14</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/562">text-wrap: pretty</a></td>
         </tr>
         <tr>
@@ -226,7 +226,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/521">[css-values-5] &#x60;attr()&#x60; support extended capabilities</a></td>
         </tr>
         <tr>
-          <td class="total">14</td>
+          <td class="total">15</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/520">CSS Multi-Column Layout block element breaking</a></td>
         </tr>
         <tr>
@@ -378,7 +378,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/437">View Transitions Level 1</a></td>
         </tr>
         <tr>
-          <td class="total">50</td>
+          <td class="total">51</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/435">Navigation API</a></td>
         </tr>
         <tr>
@@ -394,7 +394,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/431">CSS &#x60;caret&#x60;, &#x60;caret-color&#x60; and &#x60;caret-shape&#x60; properties</a></td>
         </tr>
         <tr>
-          <td class="total">173</td>
+          <td class="total">174</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/430">JPEG XL image format</a></td>
         </tr>
         <tr>
@@ -442,5 +442,5 @@
 </div>
 </main>
 <footer>
-Last updated 2023-11-01
+Last updated 2023-11-02
 </footer>
