--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </tr>
         <tr>
           <td class="total">11</td>
-          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/536">Fetch Web API </a></td>
+          <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/536">Fetch Web API - Content-type parsing</a></td>
         </tr>
         <tr>
           <td class="total">1</td>
@@ -282,7 +282,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/501">Declarative Shadow DOM</a></td>
         </tr>
         <tr>
-          <td class="total">15</td>
+          <td class="total">16</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/500">Trusted Types</a></td>
         </tr>
         <tr>
@@ -358,7 +358,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/443">Gamut mapping</a></td>
         </tr>
         <tr>
-          <td class="total">12</td>
+          <td class="total">11</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/442">CSS element() function</a></td>
         </tr>
         <tr>
@@ -394,7 +394,7 @@
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/431">CSS &#x60;caret&#x60;, &#x60;caret-color&#x60; and &#x60;caret-shape&#x60; properties</a></td>
         </tr>
         <tr>
-          <td class="total">474</td>
+          <td class="total">476</td>
           <td class="title"><a href="https://github.com/web-platform-tests/interop/issues/430">JPEG XL image format</a></td>
         </tr>
         <tr>
@@ -442,5 +442,5 @@
 </div>
 </main>
 <footer>
-Last updated 2023-12-05
+Last updated 2023-12-06
 </footer>
